Revoke asignee fix

--- a/src/applications/appsco-application-assignees-page.html
+++ b/src/applications/appsco-application-assignees-page.html
@@ -153,7 +153,7 @@
             },
 
             removeAssignee: function(assignee) {
-                this.$.appscoApplicationAssignees.removeAssignee(assignee);
+                this.$$('#appscoApplicationAssignees').removeAssignee(assignee);
             },
 
             _back: function() {
