--- a/src/appsco-manage-resource-page.html
+++ b/src/appsco-manage-resource-page.html
@@ -695,7 +695,7 @@
             },
 
             _removeAssignee: function(assignee) {
-                this.$$('appscoApplicationAssignees').removeAssignee(assignee);
+                this.$$('#appscoApplicationAssignees').removeAssignee(assignee);
                 this.$.appscoManageApplicationComponentsPage.removeAssignee(assignee);
                 this.$$('#appscoApplicationAssigneesPage').removeAssignee(assignee);
             },
