DASH-3509 Text error in Settings > Branded Login > Admin force login link

--- a/src/company/appsco-company-branded-login-page.html
+++ b/src/company/appsco-company-branded-login-page.html
@@ -199,8 +199,8 @@
                         <div class="form-input form-input-text">
                             <label for="loginPageAdminLoginLinkCaption" class="label">Admin force login link</label>
                             <p class="info">
-                                This login link i only visible to your company's admins when your company has set up
-                                external identity provider and has single sign-on login enabled.
+                                This login link is only visible to your company admins when your company has set up
+                                an external identity provider and has single sign-on login enabled.
                                 You can modify the text showing on the link and add your company's name.
                             </p>
                             <paper-input id="loginPageAdminLoginLinkCaption"
