Style components improvements

--- a/src/application/appsco-application-subscribers-page.html
+++ b/src/application/appsco-application-subscribers-page.html
@@ -21,7 +21,7 @@
                      border-bottom: 1px solid var(--divider-color);
                  };
 
-                --background-color: var(--body-background-color);
+                --item-background-color: var(--body-background-color);
                 --subscriber-initials-background-color: var(--body-background-color-darker);
             }
             :host paper-card {
