--- a/src/appsco-compliance-report-page.html
+++ b/src/appsco-compliance-report-page.html
@@ -21,8 +21,8 @@
         <style include="appsco-page-styles">
             :host {
                 --content-background-color: #ffffff;
-                --background-color: var(--body-background-color);
-                --compliance-report-account-initials-background-color: var(--body-background-color-darker);
+                --item-background-color: var(--body-background-color);
+                --report-account-initials-background-color: var(--body-background-color-darker);
                 --appsco-compliance-report-list-item: {
                     cursor: default;
                 };
