--- a/src/company/appsco-company-idp-domain-item.html
+++ b/src/company/appsco-company-idp-domain-item.html
@@ -22,7 +22,7 @@ Presents IdP settings domain in form of an item.
 
 Custom property | Description | Default
 ----------------|-------------|----------
-`--background-color` | Background color applied to the root element | `#fff`
+`--item-background-color` | Background color applied to the root element | `#fff`
 `--color` | Color applied to all the text | `#33`
 `--appsco-company-idp-domain-item` | Mixin applied to domain item element | `{}`
 `--domain-basic-info` | Mixin applied to the basic info | `{}`
@@ -47,7 +47,7 @@ Custom property | Description | Default
                 box-sizing: border-box;
                 overflow: hidden;
                 position: relative;
-                background-color: var(--background-color, #ffffff);
+                background-color: var(--item-background-color, #ffffff);
                 border-radius: 3px;
                 @apply(--shadow-elevation-2dp);
                 @apply(--layout-horizontal);
