--- a/src/company/appsco-company-idp-domains-page.html
+++ b/src/company/appsco-company-idp-domains-page.html
@@ -15,7 +15,7 @@
                      border-bottom: 1px solid var(--divider-color);
                  };
 
-                --background-color: var(--body-background-color);
+                --item-background-color: var(--body-background-color);
                 --domains-progress-bar: {
                     top: -10px;
                 };
