--- a/src/directory/appsco-directory-role-application.html
+++ b/src/directory/appsco-directory-role-application.html
@@ -88,7 +88,7 @@ Example:
                 border-radius: 3px;
                 overflow: hidden;
                 position: relative;
-                background-color: var(--background-color, #fafafa);
+                background-color: var(--item-background-color, #fafafa);
                 @apply(--appsco-directory-role-application);
             }
             :host .assignee:hover {
