--- a/src/appsco-access-on-boarding-page.html
+++ b/src/appsco-access-on-boarding-page.html
@@ -18,8 +18,8 @@
         <style include="appsco-page-styles">
             :host {
                 --content-background-color: #ffffff;
-                --background-color: var(--body-background-color);
-                --access-on-boarding-account-initials-background-color: var(--body-background-color-darker);
+                --item-background-color: var(--body-background-color);
+                --report-account-initials-background-color: var(--body-background-color-darker);
                 --appsco-access-on-boarding-list-item: {
                     cursor: default;
                 };
