--- a/src/appsco-access-report-page.html
+++ b/src/appsco-access-report-page.html
@@ -20,8 +20,8 @@
         <style include="appsco-page-styles">
             :host {
                 --content-background-color: #ffffff;
-                --background-color: var(--body-background-color);
-                --access-report-account-initials-background-color: var(--body-background-color-darker);
+                --item-background-color: var(--body-background-color);
+                --report-account-initials-background-color: var(--body-background-color-darker);
                 --appsco-access-report-list-item: {
                     cursor: default;
                 };
