--- a/src/company/appsco-company-domains-page.html
+++ b/src/company/appsco-company-domains-page.html
@@ -19,7 +19,7 @@
                      border-bottom: 1px solid var(--divider-color);
                  };
 
-                --background-color: var(--body-background-color);
+                --item-background-color: var(--body-background-color);
             }
             paper-card {
                 @apply(--full-page-paper-card);
