--- a/src/company/appsco-company-idp-settings-certificate-item.html
+++ b/src/company/appsco-company-idp-settings-certificate-item.html
@@ -26,7 +26,7 @@ Presents certificate in form of an item.
 
 Custom property | Description | Default
 ----------------|-------------|----------
-`--background-color` | Background color applied to the root element | `#fff`
+`--item-background-color` | Background color applied to the root element | `#fff`
 `--color` | Color applied to all the text | `#33`
 `--appsco-company-certificate-item` | Mixin applied to certificate item element | `{}`
 `--certificate-basic-info` | Mixin applied to the basic info | `{}`
@@ -48,7 +48,7 @@ Custom property | Description | Default
                 box-sizing: border-box;
                 overflow: hidden;
                 position: relative;
-                background-color: var(--background-color, #ffffff);
+                background-color: var(--item-background-color, #ffffff);
                 border-radius: 3px;
                 @apply(--shadow-elevation-2dp);
                 @apply(--layout-horizontal);
