--- a/src/provisioning/appsco-integration-webhooks-page.html
+++ b/src/provisioning/appsco-integration-webhooks-page.html
@@ -18,7 +18,7 @@
                      border-bottom: 1px solid var(--divider-color);
                  };
 
-                --background-color: var(--body-background-color);
+                --item-background-color: var(--body-background-color);
                 --webhook-icon-background-color: var(--body-background-color-darker);
 
                 --appsco-list-progress-bar: {
