--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -146,6 +146,7 @@
                  };
 
                 --account-initials-background-color: var(--body-background-color);
+                --subscriber-initials-background-color: var(--body-background-color-darker);
 
                 --resource-color: var(--primary-text-color);
 
