DASH-3516 [Frontend] Create global component appsco-tutorial

--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -52,6 +52,12 @@
                 on-all-notifications="_onAllNotifications"
                 on-account-logout="_onAccountLogout"></appsco-header>
 
+        <appsco-tutorial
+                id="appscoTutorial"
+                tutorials-api="[[ api.tutorialsApi ]]"
+                authorization-token="[[ authorizationToken ]]"
+        ></appsco-tutorial>
+
         <app-drawer-layout fullbleed force-narrow>
 
              <!--Drawer content -->
