--- a/src/appsco-app-header.html
+++ b/src/appsco-app-header.html
@@ -186,6 +186,8 @@
 <link rel="import" href="shared-styles.html">
 <link rel="import" href="webkit-scrollbar-style.html">
 
+<link rel="import" href="components/get-started/appsco-tutorial.html">
+
 <!-- Behaviours -->
 <link rel="import" href="components/components/appsco-behavior-export-report.html" />
 
