DASH-3525 modify appsco-tutorial and introduce appsco-tutorial-progress

--- a/src/appsco-app-header.html
+++ b/src/appsco-app-header.html
@@ -187,6 +187,7 @@
 <link rel="import" href="webkit-scrollbar-style.html">
 
 <link rel="import" href="components/get-started/appsco-tutorial.html">
+<link rel="import" href="components/get-started/appsco-tutorial-progress.html">
 
 <!-- Behaviours -->
 <link rel="import" href="components/components/appsco-behavior-export-report.html" />
