--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -56,7 +56,13 @@
                 id="appscoTutorial"
                 tutorials-api="[[ api.tutorialsApi ]]"
                 authorization-token="[[ authorizationToken ]]"
+                tutorials="{{ _tutorials }}"
         ></appsco-tutorial>
+
+        <appsco-tutorial-progress
+                tutorials="{{ _tutorials }}"
+                show="true"
+        ></appsco-tutorial-progress>
 
         <app-drawer-layout fullbleed force-narrow>
 
@@ -2182,6 +2188,12 @@
                 _personalFolderPage: {
                     type: Boolean,
                     value: false
+                },
+
+                _tutorials: {
+                    type: Object,
+                    value: function(){ return {}; },
+                    notify: true
                 }
             },
 
