DASH-3525 add progress logic and content

--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -60,8 +60,8 @@
         ></appsco-tutorial>
 
         <appsco-tutorial-progress
+                id="appscoTutorialProgress"
                 tutorials="{{ _tutorials }}"
-                show="true"
         ></appsco-tutorial-progress>
 
         <app-drawer-layout fullbleed force-narrow>
