--- a/src/company/appsco-company-settings.html
+++ b/src/company/appsco-company-settings.html
@@ -147,7 +147,7 @@ Custom property | Description | Default
             </p>
         </div>
 
-        <paper-button id="submit"
+        <paper-button id="companySettingsSaveBtn"
                       class="submit-button"
                       on-tap="_onSaveAction">Save</paper-button>
 
