--- a/src/appsco-manage-resource-page.html
+++ b/src/appsco-manage-resource-page.html
@@ -696,6 +696,14 @@
 
             reload: function() {
                 this.$.appscoManageApplicationComponentsPage.load();
+            },
+
+            showAdvanced: function() {
+                this.$.appscoManageApplicationComponentsPage.showAdvanced();
+            },
+
+            hideAdvanced: function() {
+                this.$.appscoManageApplicationComponentsPage.hideAdvanced();
             }
         });
     </script>
